Fixing spacing at bottom of single featured project in featured projects showcase

--- a/assets/scss/components/_focus-areas-showcase.scss
+++ b/assets/scss/components/_focus-areas-showcase.scss
@@ -171,6 +171,10 @@
           &::before {
             display: none;
           }
+
+          .featured-project {
+            height: 100%;
+          }
         }
       }
     }
